# hellolib

./: configure.ac
src/: Makefile.am  hello.h  lib.c
